--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,4 +3,4 @@
 <% end %>
 <p><strong>Title:</strong><%= @book.title %></p>
 <p><strong>Body:</strong><%= @book.body %></p>
-<%= link_to "Edit", books_path(@book.id) %> | <a href="/books">Back</a>
+<%= link_to "Edit", edit_book_path(@book.id) %> | <a href="/books">Back</a>
